--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -8,36 +8,35 @@
             <div class="form-group">
                 <label for="timezone">Select your timezone (or the nearest equivalent):</label>
                 <select class="form-control" name="timezone" id="timezone">
-                    {{!-- the below line makes the auto-detected timezone the default selection for users who already have it selected and for users who aren't signed up for emails--}}
-                    {{!-- currently and thus probably won't notice their old timezone being replaced by it. --}}
-                	<option id="guessed-timezone" value="auto" {{#eq loggedInUserData.settings.timezone "auto"}}selected{{else}}{{#eq loggedInUserData.emailDigestFrequency "off"}}selected{{/eq}}{{/eq}}>...</option>
-                	<option value="-12:00" {{#eq loggedInUserData.settings.timezone "-12:00"}}selected{{/eq}}>(GMT -12:00) Eniwetok, Kwajalein</option>
-                	<option value="-11:00" {{#eq loggedInUserData.settings.timezone "-11:00"}}selected{{/eq}}>(GMT -11:00) Midway Island, Samoa</option>
-                	<option value="-10:00" {{#eq loggedInUserData.settings.timezone "-10:00"}}selected{{/eq}}>(GMT -10:00) Hawaii</option>
-                	<option value="-09:00" {{#eq loggedInUserData.settings.timezone "-09:00"}}selected{{/eq}}>(GMT -9:00) Alaska</option>
-                	<option value="-08:00" {{#eq loggedInUserData.settings.timezone "-08:00"}}selected{{/eq}}>(GMT -8:00) Pacific Time (US &amp; Canada)</option>
-                	<option value="-07:00" {{#eq loggedInUserData.settings.timezone "-07:00"}}selected{{/eq}}>(GMT -7:00) Mountain Time (US &amp; Canada)</option>
-                	<option value="-06:00" {{#eq loggedInUserData.settings.timezone "-06:00"}}selected{{/eq}}>(GMT -6:00) Central Time (US &amp; Canada), Mexico City</option>
-                	<option value="-05:00" {{#eq loggedInUserData.settings.timezone "-05:00"}}selected{{/eq}}>(GMT -5:00) Eastern Time (US &amp; Canada), Bogota, Lima</option>
-                	<option value="-04:00" {{#eq loggedInUserData.settings.timezone "-04:00"}}selected{{/eq}}>(GMT -4:00) Atlantic Time (Canada), Caracas, La Paz</option>
-                	<option value="-03:00" {{#eq loggedInUserData.settings.timezone "-03:00"}}selected{{/eq}}>(GMT -3:00) Brazil, Buenos Aires, Georgetown</option>
-                	<option value="-02:00" {{#eq loggedInUserData.settings.timezone "-02:00"}}selected{{/eq}}>(GMT -2:00) Mid-Atlantic</option>
-                	<option value="-01:00" {{#eq loggedInUserData.settings.timezone "-01:00"}}selected{{/eq}}>(GMT -1:00) Azores, Cape Verde Islands</option>
-                	<option value="+00:00" {{#eq loggedInUserData.settings.timezone "+00:00"}}selected{{/eq}}>(GMT) Western Europe Time, London, Lisbon, Casablanca</option>
-                	<option value="+01:00" {{#eq loggedInUserData.settings.timezone "+01:00"}}selected{{/eq}}>(GMT +1:00) Amsterdam, Brussels, Copenhagen, Madrid, Paris</option>
-                	<option value="+02:00" {{#eq loggedInUserData.settings.timezone "+02:00"}}selected{{/eq}}>(GMT +2:00) Kaliningrad, South Africa</option>
-                	<option value="+03:00" {{#eq loggedInUserData.settings.timezone "+03:00"}}selected{{/eq}}>(GMT +3:00) Baghdad, Riyadh, Moscow, St. Petersburg</option>
-                	<option value="+04:00" {{#eq loggedInUserData.settings.timezone "+04:00"}}selected{{/eq}}>(GMT +4:00) Abu Dhabi, Muscat, Baku, Tbilisi</option>
-                	<option value="+05:00" {{#eq loggedInUserData.settings.timezone "+05:00"}}selected{{/eq}}>(GMT +5:00) Ekaterinburg, Islamabad, Karachi, Tashkent</option>
-                	<option value="+06:00" {{#eq loggedInUserData.settings.timezone "+06:00"}}selected{{/eq}}>(GMT +6:00) Almaty, Dhaka, Colombo</option>
-                	<option value="+07:00" {{#eq loggedInUserData.settings.timezone "+07:00"}}selected{{/eq}}>(GMT +7:00) Bangkok, Hanoi, Jakarta</option>
-                	<option value="+08:00" {{#eq loggedInUserData.settings.timezone "+08:00"}}selected{{/eq}}>(GMT +8:00) Beijing, Perth, Singapore, Hong Kong</option>
-                	<option value="+09:00" {{#eq loggedInUserData.settings.timezone "+09:00"}}selected{{/eq}}>(GMT +9:00) Tokyo, Seoul, Osaka, Sapporo, Yakutsk</option>
-                	<option value="+10:00" {{#eq loggedInUserData.settings.timezone "+10:00"}}selected{{/eq}}>(GMT +10:00) Eastern Australia, Guam, Vladivostok</option>
-                	<option value="+11:00" {{#eq loggedInUserData.settings.timezone "+11:00"}}selected{{/eq}}>(GMT +11:00) Magadan, Solomon Islands, New Caledonia</option>
-                	<option value="+12:00" {{#eq loggedInUserData.settings.timezone "+12:00"}}selected{{/eq}}>(GMT +12:00) Auckland, Wellington, Fiji, Kamchatka</option>
-                	<option value="+13:00" {{#eq loggedInUserData.settings.timezone "+13:00"}}selected{{/eq}}>(GMT +13:00) Apia, Nukualofa</option>
-                	<option value="+14:00" {{#eq loggedInUserData.settings.timezone "+14:00"}}selected{{/eq}}>(GMT +14:00) Line Islands, Tokelau</option>
+                    {{!-- the defaulted selected timezone for this section is chosen by javascript at the bottom of the page --}}
+                	<option id="guessed-timezone" value="auto">...loading default timezone...</option>
+                	<option value="-12:00">(GMT -12:00) Eniwetok, Kwajalein</option>
+                	<option value="-11:00">(GMT -11:00) Midway Island, Samoa</option>
+                	<option value="-10:00">(GMT -10:00) Hawaii</option>
+                	<option value="-09:00">(GMT -9:00) Alaska</option>
+                	<option value="-08:00">(GMT -8:00) Pacific Time (US &amp; Canada)</option>
+                	<option value="-07:00">(GMT -7:00) Mountain Time (US &amp; Canada)</option>
+                	<option value="-06:00">(GMT -6:00) Central Time (US &amp; Canada), Mexico City</option>
+                	<option value="-05:00">(GMT -5:00) Eastern Time (US &amp; Canada), Bogota, Lima</option>
+                	<option value="-04:00">(GMT -4:00) Atlantic Time (Canada), Caracas, La Paz</option>
+                	<option value="-03:00">(GMT -3:00) Brazil, Buenos Aires, Georgetown</option>
+                	<option value="-02:00">(GMT -2:00) Mid-Atlantic</option>
+                	<option value="-01:00">(GMT -1:00) Azores, Cape Verde Islands</option>
+                	<option value="+00:00">(GMT) Western Europe Time, London, Lisbon, Casablanca</option>
+                	<option value="+01:00">(GMT +1:00) Amsterdam, Brussels, Copenhagen, Madrid, Paris</option>
+                	<option value="+02:00">(GMT +2:00) Kaliningrad, South Africa</option>
+                	<option value="+03:00">(GMT +3:00) Baghdad, Riyadh, Moscow, St. Petersburg</option>
+                	<option value="+04:00">(GMT +4:00) Abu Dhabi, Muscat, Baku, Tbilisi</option>
+                	<option value="+05:00">(GMT +5:00) Ekaterinburg, Islamabad, Karachi, Tashkent</option>
+                	<option value="+06:00">(GMT +6:00) Almaty, Dhaka, Colombo</option>
+                	<option value="+07:00">(GMT +7:00) Bangkok, Hanoi, Jakarta</option>
+                	<option value="+08:00">(GMT +8:00) Beijing, Perth, Singapore, Hong Kong</option>
+                	<option value="+09:00">(GMT +9:00) Tokyo, Seoul, Osaka, Sapporo, Yakutsk</option>
+                	<option value="+10:00">(GMT +10:00) Eastern Australia, Guam, Vladivostok</option>
+                	<option value="+11:00">(GMT +11:00) Magadan, Solomon Islands, New Caledonia</option>
+                	<option value="+12:00">(GMT +12:00) Auckland, Wellington, Fiji, Kamchatka</option>
+                	<option value="+13:00">(GMT +13:00) Apia, Nukualofa</option>
+                	<option value="+14:00">(GMT +14:00) Line Islands, Tokelau</option>
                 </select>
                 <p class="form-text small">This is currently only used for sending you your digest emails at the correct time. Picking a non-default one will result in us not really knowing your whole daylight savings time deal</p>
             </div>
@@ -182,8 +181,8 @@
     }else if(autoDetectedTimeZone !== lastKnownTimeZone){
         //if auto-detected time zone was saved but is now different, offer them the new one as the second option, and change their auto-detected time zone if they choose it
         var lastKnownTimeZoneString = stringifyTZ(lastKnownTimeZone);
-        $("#guessed-timezone")[0].innerHTML = "Last known default (for you) equivalent to that of: "+lastKnownTimeZoneString;
-        $("#guessed-timezone").after('<option value="auto" id="newDefault">'+'Brand new default (for you) equivalent to that of: '+autoDetectedTimeZoneString+'</option>');
+        $("#guessed-timezone")[0].innerHTML = "Last known default (for you) that of: "+lastKnownTimeZoneString;
+        $("#guessed-timezone").after('<option value="auto" id="newDefault">'+'Brand new default (for you) that of: '+autoDetectedTimeZoneString+'</option>');
         $('#settingsForm').submit(function(event){
             if($("#newDefault")[0].selected){
                 $("#submitDetectedTimeZone").val(autoDetectedTimeZone);
@@ -206,6 +205,14 @@
             }
         }
     })
+    
+    {{!-- if the user isn't using their timezone, select auto for them, otherwise select the timezone they have currently selected --}}
+    {{#eq loggedInUserData.settings.digestEmailFrequency 'off'}}
+    $('#timezone').find('[value="auto"]').prop('selected',true);
+    {{else}}
+    $('#timezone').find('[value="{{loggedInUserData.settings.timezone}}"]').prop('selected',true);
+    {{/eq}}
+
     //format the user's currently chosen email time so it's not in 24-hour format like how it's stored in the database:
     var day = moment().tz('GMT'); //we need an arbitrary day to accompany the time when creating the moment object that will give us our formatted output
     var splitTime = $('#currentEmailTime').html().split(/:/);
