mess with embedded scripts

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,23 +39,16 @@
   crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/infinite-scroll@3/dist/infinite-scroll.pkgd.min.js"></script>
-  <script src="/js/autosize.min.js"></script>
-  <script src="/js/jquery.uploadPreview.min.js"></script>
+  <script src="https://unpkg.com/infinite-scroll@3/dist/infinite-scroll.pkgd.min.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/1.17.1/simplelightbox.min.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/1.17.1/simple-lightbox.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/1.17.1/simple-lightbox.min.js" crossorigin="anonymous"></script>
 
-  <link href="/css/image-upload-preview.css" type="text/css" rel="stylesheet" />
-  <script src="/js/bootbox.min.js"></script>
+  <script src="/js/bootbox.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/tribute.css" />
-  <script src="/js/tribute.js"></script>
+  <script src="/js/tribute.js" crossorigin="anonymous"></script>
 
-  <script src="/js/html5sortable.min.js"></script>
-
-  <script src="/js/handlebars-v4.1.2.js"></script>
-
-  <script src="/js/medium-editor.js"></script>
+  <script src="/js/medium-editor.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="/css/beagle.min.css" />
 
