add confirm dialogue to relationship changes

--- a/views/partials/profilescripts.handlebars
+++ b/views/partials/profilescripts.handlebars
@@ -14,45 +14,43 @@
 </script>
 {{else}}
 <script type="text/javascript">
-$("#flagButton").click(function() {
-  $.post( "/useraction/flag/add/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData.username }}", function( result ) {
-     location.reload();
+function confirmRelationshipChange(confirmQString, relType, addOrDelete) {
+  bootbox.confirm(confirmQString, function (result) {
+    if (result == true) {
+      $.post("/useraction/" + relType + "/" + addOrDelete + "/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData.username }}", function (result) {
+        location.reload();
+      });
+    }
+  });
+}
+
+$("#flagButton").click(function () {
+  confirmRelationshipChange('Are you sure you want to flag this user?', 'flag', 'add');
+});
+
+$("#unflagButton").click(function () {
+  confirmRelationshipChange('Are you sure you want to unflag this user?', 'flag', 'delete');
+});
+$("#blockButton").click(function () {
+  confirmRelationshipChange('Are you sure you want to block this user?', 'block', 'add');
+});
+$("#unblockButton").click(function () {
+  confirmRelationshipChange('Are you sure you want to unblock this user?', 'block', 'delete');
+});
+$("#trustButton").click(function () {
+  confirmRelationshipChange('Are you sure you want to trust this user?', 'trust', 'add');
+});
+$("#untrustButton").click(function () {
+  confirmRelationshipChange('Are you sure you want to stop trusting this user?', 'trust', 'delete');
+});
+$("#followButton").click(function () {
+  //i think this is the action we least want to discourage/make weird, so no confirmation dialogue
+  $.post("/useraction/follow/add/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData.username }}", function (result) {
+    location.reload();
   });
 });
-$("#unflagButton").click(function() {
-  $.post( "/useraction/flag/delete/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData.username }}", function( result ) {
-     location.reload();
-  });
-});
-$("#blockButton").click(function() {
-  $.post( "/useraction/block/add/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData.username }}", function( result ) {
-     location.reload();
-  });
-});
-$("#unblockButton").click(function() {
-  $.post( "/useraction/block/delete/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData.username }}", function( result ) {
-     location.reload();
-  });
-});
-$("#trustButton").click(function() {
-  $.post( "/useraction/trust/add/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData.username }}", function( result ) {
-     location.reload();
-  });
-});
-$("#untrustButton").click(function() {
-  $.post( "/useraction/trust/delete/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData.username }}", function( result ) {
-     location.reload();
-  });
-});
-$("#followButton").click(function() {
-  $.post( "/useraction/follow/add/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData.username }}", function( result ) {
-     location.reload();
-  });
-});
-$("#unfollowButton").click(function() {
-  $.post( "/useraction/follow/delete/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData.username }}", function( result ) {
-     location.reload();
-  });
-});
+$("#unfollowButton").click(function () {
+  confirmRelationshipChange('Are you sure you want to unfollow this user?', 'follow', 'delete');
+}); 
 </script>
 {{/if}}
