add fontawesome css for bootstrap stuff in profile page sidebar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,8 @@
   <link rel="stylesheet" href="/css/navbar-icons.css">
   <link id="darkModeStylesheet" rel="stylesheet" href="">
 
-  <script defer src="/fonts/fontawesome/js/all.js"></script>
+  <script defer src="/fonts/fontawesome/js/all.min.js"></script>
+  <link rel="stylesheet" href="/fonts/fontawesome/css/all.min.css">
 
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
