fix incredibly tiny css error

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -667,7 +667,7 @@ hr {
     /* border-top: 1px solid #e7e7e7; */
     /* margin-top: 10px; */
     /* padding-top: 0px; */
-}
+/*}*/
 
 /* .individualReplyContainer {
     word-wrap: break-word;
