--- a/views/community.handlebars
+++ b/views/community.handlebars
@@ -166,7 +166,7 @@
                     <input type="hidden" name="imageUrl" value="{{communityData.image}}" />
                     <label>Community image</label>
                     <div id="image-preview">
-                      <label for="image-upload" id="image-label">Choose file</label>
+                      <label for="image-upload" id="image-label">Choose image</label>
                       <input type="file" name="proposedValue" id="image-upload" />
                     </div>
                   </div>
@@ -473,14 +473,20 @@ $(".community-panel-link").click(function() {
   }
 });
 
-$.uploadPreview({
-  input_field: "#image-upload",
-  preview_box: "#image-preview",
-  label_field: "#image-label",
-  label_default: "Choose file",
-  label_selected: "Change file",
-  no_label: false
-});
+$("#image-upload").change(function (e) {
+    var preview = $("#image-preview");
+    var reader = new FileReader();
+    reader.addEventListener("load", function () {
+      preview.css('background-image',"url("+reader.result+")");
+      $("#image-label").html("change image");
+    }, false);
+    if (this.files[0]) {
+      reader.readAsDataURL(this.files[0]);
+    }else{
+      preview.css('background-image',"");
+      $("#image-label").html("choose image");
+    }
+  })
 $("#image-preview").css("background-image", "url('/images/communities/{{communityData.image}}')");
 $("#image-preview").css("background-size", "cover");
 $("#image-preview").css("background-position", "center center");
