--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -12,7 +12,7 @@
     {{> emojilist }}
   </div>
   <div id="image-preview-holder" class="form-row post-controls image-preview-holder">
-    <input type="file" class="file-input" accept="image/gif, image/jpeg, image/png" aria-label="Choose File" name="postImage" multiple>
+    <input type="file" class="file-input" accept="image/gif, image/jpeg, image/png" aria-label="Choose image" name="postImage" multiple>
   </div>
   <div id="bottomPostControlsRow" class="form-row mt-2 post-controls">
     {{! Hide this div in communities}}
