--- a/views/partials/profilescripts.handlebars
+++ b/views/partials/profilescripts.handlebars
@@ -1,13 +1,19 @@
 {{#if isOwnProfile}}
 <script type="text/javascript">
-  $.uploadPreview({
-    input_field: "#image-upload",
-    preview_box: "#image-preview",
-    label_field: "#image-label",
-    label_default: "Choose file",
-    label_selected: "Change file",
-    no_label: false
-  });
+  $("#image-upload").change(function (e) {
+    var preview = $("#image-preview");
+    var reader = new FileReader();
+    reader.addEventListener("load", function () {
+      preview.css('background-image',"url("+reader.result+")");
+      $("#image-label").html("change image");
+    }, false);
+    if (this.files[0]) {
+      reader.readAsDataURL(this.files[0]);
+    }else{
+      preview.css('background-image',"");
+      $("#image-label").html("choose image");
+    }
+  })
   $("#image-preview").css("background-image", "url('/images/{{profileData.image}}')");
   $("#image-preview").css("background-size", "cover");
   $("#image-preview").css("background-position", "center center");
