--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -70,7 +70,7 @@
 		</div>
         <label>Profile image (maximum file size 3MB)</label>
   			<div id="image-preview">
-  				<label for="image-upload" id="image-label">Choose file</label>
+  				<label for="image-upload" id="image-label">Choose image</label>
   				<input type="file" name="imageUpload" id="image-upload" accept="image/*" />
   			</div>
       </div>
