--- a/views/partials/newreplyform_dynamic.handlebars
+++ b/views/partials/newreplyform_dynamic.handlebars
@@ -6,7 +6,7 @@
     {{> emojilist }}
   </div>
   <div id="image-preview-holder" class="form-row post-controls image-preview-holder">
-    <input type="file" class="file-input" accept="image/gif, image/jpeg, image/png" aria-label="Choose File" name="postImage" multiple>
+    <input type="file" class="file-input" accept="image/gif, image/jpeg, image/png" aria-label="Choose image" name="postImage" multiple>
   </div>
   <div id="replyControlsRow" class="form-row mt-2 post-controls">
     <div class="leftSideControls">
