--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,9 +46,9 @@
 
   <script src="/js/bootbox.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/tribute.css" />
-  <script src="/js/tribute.js" crossorigin="anonymous"></script>
+  <script src="/js/tribute.min.js" crossorigin="anonymous"></script>
 
-  <script src="/js/medium-editor.js" crossorigin="anonymous"></script>
+  <script src="/js/medium-editor.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="/css/beagle.min.css" />
 
