--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,10 +43,12 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/1.17.1/simplelightbox.min.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/1.17.1/simple-lightbox.min.js" crossorigin="anonymous"></script>
-
+  
   <script src="/js/bootbox.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/tribute.css" />
   <script src="/js/tribute.min.js" crossorigin="anonymous"></script>
+
+  <script src="/js/handlebars-v4.1.2.js"></script>
 
   <script src="/js/medium-editor.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
