--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -48,7 +48,7 @@
   <link rel="stylesheet" href="/css/tribute.css" />
   <script src="/js/tribute.min.js" crossorigin="anonymous"></script>
 
-  <script src="/js/handlebars-v4.1.2.js"></script>
+  <script src="/js/handlebars-v4.1.2.min.js"></script>
 
   <script src="/js/medium-editor.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
